Base64 upgraded